feat: [SQU-171] View databases with tables (#224)
* shadcn table

* breadcrumb and redirect

* query database endpoint

* query database on page

* table for content

* lint
